--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -99,11 +99,11 @@
         <div class="row">
             <div class="contactleft">
                 <h1 class="subtitle">Contact me</h1>
-                <p><i class="fa-solid fa-envelope-circle-check"></i>poojaharini467@gmail.com</p>
+                <p><i class="fa-solid fa-envelope-circle-check"></i>123@gmail.com</p>
                 <p> <i class="fa-brands fa-linkedin"></i>Linkedin-Poojaharini K</p>
                 <div class="socialicons">
-                    <a href="poojaharini467@gmail.com"><i class="fa-solid fa-envelope-circle-check"></i></a>
-                    <a href="https://www.linkedin.com/in/poojaharini-k-b94a5a256?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="123@gmail.com"><i class="fa-solid fa-envelope-circle-check"></i></a>
+                    <a href="https://www.linkedin.com/in/123_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
 
